[package]
name = "prost-uuid-doubleint"
version = "0.1.1"
edition = "2021"
description = "Prost uuid custom datatype"
authors = ["Kirill Kindiuk <evilbluebeaver@gmail.com>"]
license = "MIT"
repository = "https://github.com/evilbluebeaver/prost_uuid_doubleint"
keywords = ["prost", "uuid", "protobuf"]

[dependencies]
derive_more = "0.99"
prost = "0.13"
uuid = "1.10"
