[package]
name = "prost-uuid-doubleint"
version = "0.2.1"
edition = "2021"
description = "Prost uuid custom datatype"
authors = ["Kirill Kindiuk <evilbluebeaver@gmail.com>"]
license = "MIT"
repository = "https://github.com/evilbluebeaver/prost_uuid_doubleint"
keywords = ["prost", "uuid", "protobuf"]

[dependencies]
derive_more = {version="2.0", features = ["full"]}
prost = "0.14"
uuid = "1.18"
